--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+import java.text.SimpleDateFormat
 apply plugin: 'com.android.application'
+
+def versionMajor = 1
+def versionMinor = 1
+def versionPatch = 0
+
+def buildTime() {
+    def df = new SimpleDateFormat("yyMMddhhmm")
+    return df.format(new Date())
+}
 
 android {
     compileSdkVersion 21
@@ -8,8 +18,8 @@ android {
         applicationId "com.example.googleanalyticshelloworld"
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode Integer.parseInt(buildTime())
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}.${buildTime()}"
     }
     buildTypes {
         release {
